tests/fixtures/invalid/list_notin_int.py
# Cannot use 'not in' with List[int] and Int
x: bool = [1, 2, 3] not in 1
